PHASE-01 unit 8: docs/developer/testing.rst, the real page
Replaces unit 4's stub.  What a new contributor needs without reading nine
scripts: the commands; the specification's seven kinds of test and which of
them exist after phase 01; every gate that exists today with its threshold, the
specification clause the number comes from, where it is configured and the
command that runs it; the falsifiability table -- for each gate, the injected
defect and the exact diagnostic required before the control passes; the traps;
the headless JavaFX recipe; and what is not tested yet with the owning phase.

Every number, command and diagnostic on the page was produced by running the
thing on 2026-08-29.  Four quoted diagnostics differ from the ones in
handoffs/PHASE-01-worklog.rst because the orchestrator's own sandbox controls
injected different damage from the committed harnesses': the JaCoCo ratio is
0.74 not 0.79, the mutation score 27 not 71, the LICENSE truncation 25030 bytes
not 30196, and check-workflows renames traceability.sh not maven-verify.sh.
The page records what the harnesses in the tree actually print.

Phase 15 still owns completing it; the page says so and says which phase owns
each missing suite.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NPUHibbWWCrgZeHNRNBRqo